# has_fast_pdep

./: Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: README.md  lib.rs
